# VFS

./: README.md  tests.sh
benchmarks/: Readme.md  benchmarks.py  requests.md
benchmarks/log/: vf_benchmarks2025-04-17T160402.json
examples/: benchmarks.py  requests.md
vfs/: Cargo.toml
vfs/src/: main.rs
vfs/src/vfs/: ann.rs  err.rs  mod.rs  rank.rs  serializer.rs  storage_manager.rs  tcp.rs  vector.rs
