[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Si estás usando la funcionalidad SIMD, también necesitas habilitar la característica nightly
# [dependencies.core]
# version = "0.0.0"  # Dependencia para el uso de SIMD en nightly

# [dev-dependencies]
# Agregar cualquier dependencia adicional para pruebas, si es necesario