[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libm = "0.2.11"
rand_core = "0.9.3"
rand = "0.9.0"
serde_json = "1.0.140"
indexmap = "2.9.0"
colored = "3.0.0"

# Si estás usando la funcionalidad SIMD, también necesitas habilitar la característica nightly
# [dependencies.core]
# version = "0.0.0"  # Dependencia para el uso de SIMD en nightly

# [dev-dependencies]
# Agregar cualquier dependencia adicional para pruebas, si es necesario